--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -2,61 +2,84 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+@font-face {
+  font-family: Monofonto, monospace;
+  src: url(../../assets/fonts/Monofonto-Regular.ttf);
+}
+
+* {
+  font-family: Monofonto, monospace;
+  font-size: 1.01em;
+  letter-spacing: 0.075em;
+  font-weight: normal;
+}
+
 body {
+  background-color: black;
   position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: #00FF88;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-}
-
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
-}
-
-li {
-  list-style: none;
+.error {
+  color: #FF0000;
 }
 
 a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
+  -webkit-app-region: no-drag;
 }
 
-a:hover {
-  opacity: 1;
-  text-decoration: none;
+button {
+  -webkit-app-region: no-drag;
 }
 
-.Hello {
+*:focus {
+  outline: 1px solid #FFFFFF55;
+}
+
+.Content {
   display: flex;
-  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #222;
+  -webkit-app-region: drag;
+}
+
+.ContentLeft {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
   align-items: center;
-  margin: 20px 0;
+  padding: 16px 0;
+  width: 30%;
+  max-width: 30%;
+  height: auto;
+  min-width: 300px;
+  background: rgb(17,17,17);
+  background: radial-gradient(closest-corner, #222222 0%, #181818 100%);
+}
+
+.ContentRight {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: 70%;
+  height: auto;
+  background-color: #282828;
+}
+
+.MinimizeButton {
+  position: absolute;
+  top: 20px;
+  right: 80px;
+}
+
+.ExitButton {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
