--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -27,58 +27,43 @@ body {
 }
 
 a {
+  color: #00FF88;
+  text-decoration: none;
   -webkit-app-region: no-drag;
 }
 
-button {
+h1 {
+  margin: 12px 0;
+}
+
+h2 {
+  margin: 8px 0;
+}
+
+h3 {
+  margin: 6px 0;
+}
+
+h4 {
+  margin: 4px 0;
+}
+
+button, input {
   -webkit-app-region: no-drag;
+}
+
+button:disabled {
+  filter: brightness(0.5) saturate(0.5);
+}
+
+input {
+  color: #00FF88;
+  border-width: 1px;
+  border-color: #00FF88;
+  background: #222;
+  padding: 4px;
 }
 
 *:focus {
   outline: 1px solid #FFFFFF55;
-}
-
-.Content {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  background-color: #222;
-  -webkit-app-region: drag;
-}
-
-.ContentLeft {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 0;
-  width: 30%;
-  max-width: 30%;
-  height: auto;
-  min-width: 300px;
-  background: rgb(17,17,17);
-  background: radial-gradient(closest-corner, #222222 0%, #181818 100%);
-}
-
-.ContentRight {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  width: 70%;
-  height: auto;
-  background-color: #282828;
-}
-
-.MinimizeButton {
-  position: absolute;
-  top: 20px;
-  right: 80px;
-}
-
-.ExitButton {
-  position: absolute;
-  top: 20px;
-  right: 20px;
 }
