--- a/src/renderer/MainPage/MainPage.css
+++ b/src/renderer/MainPage/MainPage.css
@@ -1,6 +1,6 @@
-.Controls {
+.MainPageControls {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 16px;
 }
