--- a/src/renderer/Lib/IconButton.css
+++ b/src/renderer/Lib/IconButton.css
@@ -9,12 +9,12 @@
 
 button.IconButton:hover {
   background: #fff1;
-  border-image: linear-gradient(to right, #0F8 0%, transparent 33%, transparent 67%, #0F8 100%) 1;
+  border-image: linear-gradient(to right, var(--theme) 0%, transparent 33%, transparent 67%, var(--theme) 100%) 1;
 }
 
 button.IconButton:active {
   background: #fff1;
-  border-image: linear-gradient(to right, #0F8 0%, transparent 33%, transparent 67%, #0F8 100%) 1;
+  border-image: linear-gradient(to right, var(--theme) 0%, transparent 33%, transparent 67%, var(--theme) 100%) 1;
 }
 
 .IconButton > img {
