--- a/src/renderer/MainPage/Blog/Blog.css
+++ b/src/renderer/MainPage/Blog/Blog.css
@@ -1,7 +1,22 @@
 .Blog {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
   width: 100%;
+  height: 100%;
+  padding: 16px 8px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-app-region: no-drag;
+}
+
+.BlogContent {
+}
+
+::-webkit-scrollbar {
+  background-color: #00000044;
+  height: 8px;
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #FFFFFF22;
+  border-radius: 6px;
 }
