--- a/src/renderer/MainPage/MainPage.css
+++ b/src/renderer/MainPage/MainPage.css
@@ -4,3 +4,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+.LogoWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
